--- a/index.html
+++ b/index.html
@@ -479,8 +479,8 @@
 
     <!-- informacion -->
     <section class="information">
-      <h3>DONDE JAPÓN SE CONECTA CON CHIMBOTE</h3>
-      <p>En Cantonada Sushi-Bar, fusionamos la tradición japonesa con la creatividad peruana para ofrecer una experiencia nikkei única. Cada plato es un homenaje a la riqueza cultural de ambos mundos, con ingredientes frescos y técnicas ancestrales que dan vida a sabores innovadores.</p>
+      <h3 class="information__title" >DONDE JAPÓN SE CONECTA CON CHIMBOTE</h3>
+      <p class="information__paragraph">En Cantonada Sushi-Bar, fusionamos la tradición japonesa con la creatividad peruana para ofrecer una experiencia nikkei única. Cada plato es un homenaje a la riqueza cultural de ambos mundos, con ingredientes frescos y técnicas ancestrales que dan vida a sabores innovadores.</p>
       <img src="/Assets/Icons/IconInformation.svg" alt="">
     </section>
 
