--- a/index.html
+++ b/index.html
@@ -4,8 +4,15 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Cantonada</title>
+    <link rel="preload" href="/Assets/font/Dela_Gothic_One/DelaGothicOne-Regular.ttf" as="font" type="font/ttf" crossorigin="anonymous">
+    <link rel="preload" href="/Assets/font/PingFang-Fonts-master/PingFang-Fonts-master/PingFang Regular.ttf" as="font" type="font/ttf" crossorigin="anonymous">
+    <link rel="preload" href="/Assets/font/PingFang-Fonts-master/PingFang-Fonts-master/PingFang Light.ttf" as="font" type="font/ttf" crossorigin="anonymous">
+    <link rel="preload" href="/Assets/font/PingFang-Fonts-master/PingFang-Fonts-master/PingFang Medium.ttf" as="font" type="font/ttf" crossorigin="anonymous">
+    <link rel="preload" href="/Assets/font/PingFang-Fonts-master/PingFang-Fonts-master/PingFang Bold.ttf" as="font" type="font/ttf" crossorigin="anonymous">
+    <link rel="preload" href="/Assets/font/PingFang-Fonts-master/PingFang-Fonts-master/PingFang Heavy.ttf" as="font" type="font/ttf" crossorigin="anonymous">
     <link rel="preload" href="public/Styles/styles.css" as="style" onload="this.onload=null;this.rel='stylesheet'">
     <link rel="stylesheet" href="public/Styles/styles.css" />
+    <script src="combo/combo.js" defer></script>
   </head>
 
   <body>
@@ -69,12 +76,29 @@
             <!-- nav  -->
            <nav class="navbar">
                 <input type="checkbox" class="navbar__check" />
+                <div class="navbar__combo">
+                  <div class="comboCustom">
+                    <div class="comboCustom__select">
+                        <div class="comboCustom__text">
+                            <svg width="15" height="20" viewBox="0 0 15 20" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                <path d="M7.08333 0C3.17291 0 0 2.87993 0 6.42857C0 12.1429 7.08333 20 7.08333 20C7.08333 20 14.1667 12.1429 14.1667 6.42857C14.1667 2.87993 10.9938 0 7.08333 0ZM7.08333 10C6.52295 10 5.97517 9.83244 5.50923 9.5185C5.04329 9.20459 4.68014 8.75829 4.46566 8.23622C4.25122 7.71416 4.19506 7.13967 4.30443 6.58542C4.41376 6.03121 4.68364 5.52215 5.07985 5.12253C5.47613 4.723 5.98095 4.45085 6.53054 4.34065C7.08017 4.23036 7.64987 4.28695 8.16759 4.50319C8.68531 4.71947 9.12785 5.08567 9.43913 5.55553C9.75051 6.02538 9.91667 6.57776 9.91667 7.14286C9.91582 7.90038 9.6171 8.62662 9.08589 9.16224C8.55473 9.69792 7.83455 9.99915 7.08333 10Z" fill="#2473A6"/>
+                            </svg>
+                            <span class="comboCustom__span">Tipo de Entrega</span>
+                        </div>
+                        <svg width="18" height="9" viewBox="0 0 18 9" fill="none" xmlns="http://www.w3.org/2000/svg">
+                            <path d="M9.16699 8.5L0.506737 0.25L17.8272 0.250002L9.16699 8.5Z" fill="#2473A6"/>
+                        </svg>
+                    </div>
+                    <ul class="comboCustom__option"></ul> <!-- Lista de opciones generada dinámicamente -->
+                </div>
+                </div>
+              
                 <ul class="navbar__list">
-                  <li>Contactanos</li>
-                  <li>Locales</li>
-                  <li>Novedades</li>
+                  <li>Menu</li>
                   <li>Promos</li>
-                  <li>Menú</li>
+                  <li>Novedades</li>
+                  <li>Locales</li>
+                  <li>Contatanos</li>
                   <li><img src="" alt="" /></li>
                   <li><button>pedido</button></li>
                 </ul>
