modal de ordenes por terminar

--- a/index.html
+++ b/index.html
@@ -847,6 +847,60 @@
     </div>
    </section>
 
+   <section class="modal-Order">
+    <div class="modal-Order__grid">
+      <div class="modal-Order__content">
+          <img src="/Assets/img/backgroundNovedades.webp" alt="">
+          <div class="modal-Order__info">
+            <svg class="modal-Order__arrowleft" width="20" height="20" viewBox="0 0 20 20" fill="none" xmlns="http://www.w3.org/2000/svg">
+              <path d="M19 10H1" stroke="#2473A6" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+              <path d="M10 19L1 10L10 1" stroke="#2473A6" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+              </svg>
+              
+          <h3 class="modal-Order__info-title">!PASA POR TU PEDIDO! 🍱</h3>
+          <p class="modal-Order__paragraph">Escoge uno de nuestros locales local y llévate tu pedido al instante.</p>
+          <div class="modal-Order__select">
+            <span class="modal-Tienda__select-text">
+                Nuevo Chimbote
+            </span>
+            <svg width="14" height="9" viewBox="0 0 14 9" fill="none" xmlns="http://www.w3.org/2000/svg">
+              <path  d="M1 1L7 7L13 1" stroke="#2473A6" stroke-width="1.5" stroke-linecap="round"/>
+              </svg>
+              
+          </div>
+          <ul class="modal-Order__contact">
+            <li>
+              <svg width="13" height="12" viewBox="0 0 13 12" fill="none" xmlns="http://www.w3.org/2000/svg">
+              <path fill="#2473A6" d="M8.4498 7.33945L8.14331 7.64419C8.14331 7.64419 7.41476 8.36862 5.42616 6.39124C3.43756 4.41396 4.1661 3.68958 4.1661 3.68958L4.35908 3.49763C4.8346 3.02484 4.87941 2.2658 4.46456 1.71164L3.61596 0.578121C3.10253 -0.107735 2.11034 -0.198328 1.52183 0.386841L0.46557 1.43713C0.173759 1.72729 -0.0217946 2.10341 0.00194787 2.52063C0.0626174 3.58812 0.545553 5.88487 3.24056 8.56453C6.09841 11.4062 8.77998 11.5191 9.87656 11.4169C10.2234 11.3846 10.525 11.2079 10.7681 10.9662L11.7241 10.0157C12.3694 9.37405 12.1875 8.27401 11.3618 7.82522L10.0761 7.12628C9.53397 6.83158 8.87351 6.91811 8.4498 7.33945Z" fill="white"/>
+              </svg>
+               123 456 789</li>
+               <li>
+                <svg width="10" height="15" viewBox="0 0 10 15" fill="none" xmlns="http://www.w3.org/2000/svg">
+                  <path fill="#2473A6" d="M4.76681 0.616699C2.13525 0.616699 0 2.55478 0 4.94288C0 8.78837 4.76681 14.0759 4.76681 14.0759C4.76681 14.0759 9.53362 8.78837 9.53362 4.94288C9.53362 2.55478 7.39837 0.616699 4.76681 0.616699ZM4.76681 7.34631C4.38969 7.34631 4.02106 7.23355 3.7075 7.02228C3.39394 6.81103 3.14956 6.51069 3.00522 6.15936C2.86091 5.80803 2.82311 5.42142 2.89672 5.04843C2.97029 4.67547 3.15191 4.33289 3.41854 4.06397C3.68523 3.7951 4.02495 3.61195 4.3948 3.53779C4.76468 3.46357 5.14807 3.50165 5.49647 3.64717C5.84487 3.79272 6.14269 4.03916 6.35217 4.35535C6.56171 4.67155 6.67353 5.04328 6.67353 5.42357C6.67297 5.93335 6.47194 6.42208 6.11445 6.78254C5.757 7.14302 5.27235 7.34574 4.76681 7.34631Z" fill="white"/>
+                  </svg>
+                  Av. Argentina A2 Lt. 4   
+               </li>
+               <li>
+                <svg class="iconmapsvg" width="14" height="14" viewBox="0 0 14 14" fill="none" xmlns="http://www.w3.org/2000/svg">
+                  <path fill="#2473A6" d="M6.72961 0.233398C5.39862 0.233398 4.09752 0.628083 2.99084 1.36754C1.88416 2.107 1.02161 3.15802 0.512264 4.3877C0.00291585 5.61737 -0.130353 6.97048 0.129311 8.27589C0.388974 9.58131 1.02991 10.7804 1.97106 11.7216C2.91221 12.6627 4.11132 13.3036 5.41673 13.5633C6.72215 13.823 8.07525 13.6897 9.30492 13.1804C10.5346 12.671 11.5856 11.8085 12.3251 10.7018C13.0645 9.5951 13.4592 8.294 13.4592 6.96301C13.4592 5.17821 12.7502 3.4665 11.4882 2.20446C10.2261 0.942409 8.51442 0.233398 6.72961 0.233398ZM9.64578 9.89039C9.5959 9.94522 9.53565 9.98961 9.46851 10.021C9.40138 10.0524 9.32868 10.0702 9.25463 10.0733C9.18058 10.0764 9.10664 10.0649 9.03709 10.0392C8.96754 10.0136 8.90376 9.97446 8.84944 9.92404L6.04544 7.378C5.99241 7.32315 5.95114 7.25805 5.92414 7.1867C5.89714 7.11534 5.88498 7.03923 5.88841 6.96301V3.8786C5.88841 3.72987 5.9475 3.58723 6.05267 3.48206C6.15784 3.37689 6.30048 3.3178 6.44921 3.3178C6.59795 3.3178 6.74059 3.37689 6.84576 3.48206C6.95093 3.58723 7.01001 3.72987 7.01001 3.8786V6.71626L9.60652 9.09966C9.71635 9.19945 9.78215 9.33871 9.78951 9.48692C9.79687 9.63513 9.74518 9.78021 9.64578 9.89039Z" fill="white"/>
+                  </svg>
+                  <div>
+                    <span>
+                      Lun - Viern: 07:25 am - 10:00pm
+                    </span>
+                    <span>Sab - Dom: 07:25 am - 10:00pm</span>
+                  </div>      
+               </li>
+          </ul>
+          <button class="modal-Order__button">Confirmar</button>
+          </div>
+      </div>
+      <figure class="modal-Order__background"> 
+        <img src="/Assets/img/imganMapa.webp" alt="">
+      </figure>
+    </div>
+   </section>
+
   <footer class="footer">
     <div class="footer__container">
       <div class="footer__grid">
